Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -23,15 +23,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def kfolds(data, k):\n",
-    "    #Force data as pandas dataframe (optional but could be helpful)\n",
-    "    #Be sure to account for the case where the dataset is not evenly divisible\n",
-    "    return None #folds should be a list of subsets of data"
+    "    #Force data as pandas dataframe\n",
+    "    data = pd.DataFrame(data)\n",
+    "    num_observations = len(data)\n",
+    "    fold_size = num_observations//k\n",
+    "    leftovers = num_observations%k\n",
+    "    folds = []\n",
+    "    start_obs = 0\n",
+    "    for fold_n in range(1,k+1):\n",
+    "        if fold_n <= leftovers:\n",
+    "            #Fold Size will be 1 larger to account for leftovers\n",
+    "            fold =  data.iloc[start_obs : start_obs+fold_size+1] \n",
+    "            folds.append(fold)\n",
+    "            start_obs +=  fold_size + 1\n",
+    "        else:\n",
+    "            fold =  data.iloc[start_obs : start_obs+fold_size] \n",
+    "            folds.append(fold)\n",
+    "            start_obs +=  fold_size\n",
+    "            \n",
+    "    return folds #folds should be a list of subsets of data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -45,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +197,7 @@
        "4         62      74170  4.151958e+07  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +212,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df) // 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,20 +248,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>budget</th>\n",
+       "      <th>domgross</th>\n",
+       "      <th>title</th>\n",
+       "      <th>Response_Json</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>imdbRating</th>\n",
+       "      <th>Metascore</th>\n",
+       "      <th>imdbVotes</th>\n",
+       "      <th>Model</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>13000000</td>\n",
+       "      <td>25682380</td>\n",
+       "      <td>21 &amp;amp; Over</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>48</td>\n",
+       "      <td>206513</td>\n",
+       "      <td>4.912759e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>45658735</td>\n",
+       "      <td>13414714</td>\n",
+       "      <td>Dredd 3D</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.267265e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20000000</td>\n",
+       "      <td>53107035</td>\n",
+       "      <td>12 Years a Slave</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>96</td>\n",
+       "      <td>537525</td>\n",
+       "      <td>1.626624e+08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     budget  domgross             title  Response_Json  Year  imdbRating  \\\n",
+       "0  13000000  25682380     21 &amp; Over              0  2008         6.8   \n",
+       "1  45658735  13414714          Dredd 3D              0  2012         0.0   \n",
+       "2  20000000  53107035  12 Years a Slave              0  2013         8.1   \n",
+       "\n",
+       "   Metascore  imdbVotes         Model  \n",
+       "0         48     206513  4.912759e+07  \n",
+       "1          0          0  2.267265e+05  \n",
+       "2         96     537525  1.626624e+08  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#folds[0]"
+    "folds[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>budget</th>\n",
+       "      <th>domgross</th>\n",
+       "      <th>title</th>\n",
+       "      <th>Response_Json</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>imdbRating</th>\n",
+       "      <th>Metascore</th>\n",
+       "      <th>imdbVotes</th>\n",
+       "      <th>Model</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>61000000</td>\n",
+       "      <td>75612460</td>\n",
+       "      <td>2 Guns</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>55</td>\n",
+       "      <td>173726</td>\n",
+       "      <td>7.723381e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>40000000</td>\n",
+       "      <td>95020213</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>62</td>\n",
+       "      <td>74170</td>\n",
+       "      <td>4.151958e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>225000000</td>\n",
+       "      <td>38362475</td>\n",
+       "      <td>47 Ronin</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>28</td>\n",
+       "      <td>128766</td>\n",
+       "      <td>1.605898e+08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      budget  domgross     title  Response_Json  Year  imdbRating  Metascore  \\\n",
+       "3   61000000  75612460    2 Guns              0  2013         6.7         55   \n",
+       "4   40000000  95020213        42              0  2013         7.5         62   \n",
+       "5  225000000  38362475  47 Ronin              0  2013         6.3         28   \n",
+       "\n",
+       "   imdbVotes         Model  \n",
+       "3     173726  7.723381e+07  \n",
+       "4      74170  4.151958e+07  \n",
+       "5     128766  1.605898e+08  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#folds[1]"
+    "folds[1]"
    ]
   },
   {
@@ -241,20 +464,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def mse(residual_col):\n",
-    "#     residual_col = pd.Series(residual_col)\n",
-    "    return None"
+    "    residual_col = pd.Series(residual_col)\n",
+    "    return np.mean(residual_col.astype(float).map(lambda x: x**2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-ea900a5ca7cf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;31m#Split into the train and test sets for this fold\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mtrain\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfold\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfold\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfolds\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m!=\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfolds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;31m#Fit Linear Regression Model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "test_errs = []\n",
     "train_errs = []\n",
@@ -262,13 +497,28 @@
     "\n",
     "for n in range(k):\n",
     "    #Split into the train and test sets for this fold\n",
-    "    train = None\n",
-    "    test = None\n",
+    "    train = pd.concat([fold for i, fold in enumerate(folds) if i!=n])\n",
+    "    test = folds[n]\n",
     "    #Fit Linear Regression Model\n",
-    "    \n",
+    "    ols = LinearRegression()\n",
+    "    ols.fit(train[X_feats], train[y_feat])\n",
     "    #Evaluate Train and Test Errors\n",
+    "    y_hat_train = ols.predict(train[X_feats])\n",
+    "    y_hat_test = ols.predict(test[X_feats])\n",
+    "    train_residuals = y_hat_train - train[y_feat]\n",
+    "    test_residuals = y_hat_test - test[y_feat]\n",
+    "#     print(y_hat_train)\n",
+    "#     print(train[y_feat])\n",
+    "#     print(train_residuals)\n",
+    "    train_errs.append(mse(train_residuals))\n",
+    "    test_errs.append(mse(test_residuals))\n",
     "\n",
-    "#Plot Train Versus Test Errors for each of the 10 folds"
+    "# plt.bar(range(k), test_errs, label='Test MSE')\n",
+    "# plt.bar(range(k), train_errs, label='Train MSE')\n",
+    "# plt.legend(bbox_to_anchor=(1,1))\n",
+    "to_plot = pd.DataFrame(test_errs, train_errs).reset_index()\n",
+    "to_plot.columns = ['Test MSE', 'Train MSE']\n",
+    "to_plot.plot(kind='bar')"
    ]
   },
   {
@@ -299,11 +549,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your function here"
+    "def sort_data(data):\n",
+    "    data = pd.DataFrame(data)\n",
+    "    return data.sample(frac=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Should the data have been collected in groups it could located near each other in the row order. This would create a bias in a smaller sample population. "
    ]
   },
   {
@@ -311,9 +570,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Your answer here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -332,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
